syntax = "proto3";

package proto;
option go_package = "../pb";
// protoc -I=pb --go_out=pb  --go-grpc_out=pb  pb/client_service.proto


message ClientRes {
    string err = 1;
}

service Clients{
    rpc UpdateClientInfo (UpdateClientInfoReq) returns (ClientRes){}
    rpc UpdateClientPass (UpdateClientPassReq) returns (ClientRes){}
    rpc DeleteClient (DeleteClientReq) returns (ClientRes){}
}

message UpdateClientInfoReq {
    int32 id = 1;
    string name = 2;
    string number = 3;
    string email = 4;
    string dob = 5;
    string address = 6;
}

message UpdateClientPassReq {
    int32 id = 1;
    string pass = 2;
    string pass1 = 3;
    string pass2 = 4;
}

message DeleteClientReq {
    string login = 1;
}

message AddToBasketReq {
    int32 Client_id = 1;
    int32 prod_id = 2;
}


service ClientGroups{
    rpc GetGroups (GetGroupsReq) returns (GetGroupsRes){}
}

message GetGroupsReq{ 
    int32 group_id = 1; 
    int32 language_id = 2;
}

message GetGroupsRes{
    message Group{
        int32 group_id = 1;
        string title = 2;
        string description = 3;
    }

    repeated Group groups = 1;
    int32 status = 2;
    string err = 3;

}